@@ -16,7 +16,6 @@
 
     <properties>
         <surefire.args>
-            --add-exports=org.mule.runtime.artifact.ast/org.mule.runtime.ast.internal.model=org.mule.runtime.extensions.mule.support
             ${surefire.test.unit.open.args}
         </surefire.args>
 
@@ -204,7 +203,6 @@
         <dependency>
             <groupId>org.mule.skyscreamer</groupId>
             <artifactId>jsonassert</artifactId>
-            <version>${jsonassert.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
